# routing-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  path.json
migrations/: 20230506_create_ways_lenght.sql  20230507_ways_first_node_index.sql  20230509_add_first_and_last_node.sql  20230510_create_tags_way_and_rel.sql
osm2pgsql/: Dockerfile  create.sh  style
src/: astar.rs  main.rs  map.rs  route.rs
src/data/: mod.rs  node.rs  way.rs
