[package]
name = "routing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
futures = "0.3.26"
json = "0.12.4"
osmpbfreader = "0.16.0"
pathfinding = "4.2.1"
serde = "1.0.152"
sqlx = {version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"]}
tokio = {version = "1.26.0", features = ["macros", "rt"]}
