[package]
name = "routing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
futures = "0.3.26"
indexmap = "1.9.2"
json = "0.12.4"
num-traits = "0.2.15"
osmpbfreader = "0.16.0"
postgres = "0.19.4"
rayon = "1.7.0"
rustc-hash = "1.1.0"
serde = "1.0.152"
tokio = {version = "1.26.0", features = ["macros", "rt"]}
